# gb_lang

./: .gitignore  Cargo.toml  README.md  checks.sh  file  file.gb  fmt.sh  grammar.txt  justfile  lint.sh  output  test.sh
.github/workflows/: rust.yml
gbc/: Cargo.toml
gbc_ast/: Cargo.toml
gbc_ast/src/: ast.rs  lib.rs  node.rs  token.rs
gbc_lex/: Cargo.toml
gbc_lex/gbc_lex_derive/: Cargo.toml
gbc_lex/gbc_lex_derive/src/: lib.rs
gbc_lex/src/: lexer.rs  lib.rs  position_chars.rs  tests.rs
gbc_macros/: Cargo.toml
gbc_macros/src/: ast_node.rs  lib.rs  token_type_ext.rs
gbc_parse/: Cargo.toml
gbc_parse/src/: lib.rs  syntax_error.rs  tests.rs
gbc_parse/src/parse_tree/: mod.rs
gbc_shared/: Cargo.toml
gbc_shared/src/: lib.rs  traits.rs
src/: ast.rs  error.rs  gb.pest  gb_type.rs  grammar.txt  interpreter.rs  lex_tests.rs  lexer.rs  lib.rs  main.rs  parser.rs  scope.rs  tests.rs  token.rs
src/ast/: mod.rs  node.rs
src/interpreter/: environment.rs  gb_type.rs  mod.rs  tests.rs
src/interpreter/lib/: mod.rs
src/lexer/: mod.rs  tests.rs
src/parser/: error.rs  mod.rs  parser.rs  tests.rs
