[package]
name = "gb_lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive"] }
gxhash = "3.4.1"
lazy_static = "1.4.0"
regex = "1.7.1"
thiserror = "1.0.50"

[workspace]
resolver = "2"
members = [ 
]
