[package]
name = "gb_lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gb"
path = "src/main.rs"

[dependencies]
gbc_lex = { path = "./gbc_lex" }

[workspace]
resolver = "2"
members = [ "gbc", "gbc_ast","gbc_lex" 
, "gbc_parse"]
