[package]
name = "gbc_lex"
version = "0.1.0"
edition = "2021"
description = "Lexing for G♭."

[profile.dev]
features = ["eager_error_printing"]

[features]
eager_error_printing = []

[dependencies]
thiserror = "2.0.12"
gbc_macros = { path = "../gbc_macros" }
gbc_shared = { path = "../gbc_shared" }
readonly = "0.2.13"
